# lob-microstructure

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  extended.yaml  paper_reproduction.yaml  trading.yaml
docs/: methodology_checklist.md  spec.md  testnet_e2e_checklist.md
reports/: btcusdt_regime.md  btcusdt_walk_forward.md  ethusdt_regime.md  ethusdt_walk_forward.md  execution_analysis.md  executive_summary.md  experiment_report.md  findings.md  phase14_24h_walkforward.md  phase2_cost_analysis.md  phase8_full_cycle_analysis.md  regime_analysis.md  technical_report.md  walk_forward_analysis.md
results/: paper_trades.db
src/: __init__.py  backtest.py  cli.py  config.py  constants.py  cost_model.py  data_collector.py  data_loader.py  exchange_api.py  execution_analytics.py  experiments.py  features.py  filters.py  imbalance_strategy.py  labeling.py  leaderboard.py  metrics.py  ml_filter.py  models.py  notifier.py  order_manager.py  paper_trader.py  regime.py  report.py  risk_manager.py  strategy.py  walk_forward.py  ws_collector.py  ws_private.py
tests/: test_basics.py  test_live_execution.py  test_live_infra.py  test_new_modules.py  test_paper_trader.py  test_risk_manager.py
